--- a/fetch-async-await-eventemitter.html
+++ b/fetch-async-await-eventemitter.html
@@ -12,6 +12,8 @@
     <h1>Test fetch</h1>
     <input type = "button" onclick = "callFetch()" value = "Call to run fetch">
     </br></br></br>
-    <input type = "button" onclick = "callFetchExternal()" value = "Call external API">  
+    <input type = "button" onclick = "callFetchExternal()" value = "Call external API"> 
+    </br></br></br>
+    <input type = "button" onclick = "callSimpleFunc()" value = "Call await function with fetch">  
 </body>
 </html>
